@@ -4,6 +4,7 @@ giix Change Log
 Version 1.10, to be released
 ----------------------------
 Chg: Better directory organization. Now giix have its own root directory.
+Bug: Fixes issue 23: Removed undefined variables from GxActiveRecord::saveRelated.
 
 Version 1.9, 2011-07-06
 ----------------------------
